--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="completed">Completed</string>
     <string name="enter_article_name">Enter article name</string>
     <string name="enter_article_amount">Enter article amount</string>
+    <string name="edit_article_detail">Edit article detail</string>
+    <string name="name_of_list">Name of list</string>
+    <string name="purchased">Purchased</string>
+    <string name="not_purchased">Not purchased</string>
 </resources>
